@@ -6,5 +6,6 @@ export(TNRS_metadata)
 export(TNRS_sources)
 export(TNRS_version)
 import(httr)
+importFrom(httr,GET)
 importFrom(jsonlite,fromJSON)
 importFrom(jsonlite,toJSON)
