@@ -13,11 +13,10 @@
 TNRS_metadata <- function(bibtex_file=NULL){
   
   # Check for internet access
-  if (!is.character(getURL("www.google.com"))) {
+  if (!check_internet()) {
     message("This function requires internet access, please check your connection.")
     return(invisible(NULL))
-  }
-  
+  }  
 
   output <- list()
 
