@@ -13,11 +13,10 @@ TNRS_sources <- function(){
   
   
   # Check for internet access
-  if (!is.character(getURL("www.google.com"))) {
+  if (!check_internet()) {
     message("This function requires internet access, please check your connection.")
     return(invisible(NULL))
-  }
-  
+  }  
   
   # URL for TNRS API
   #url = "https://tnrsapidev.xyz/tnrs_api.php"
