@@ -8,6 +8,7 @@ TNRS 0.2.0
 ## Bug fixes
 * Fixed error in naming metadata elements
 * A server upgrade rendered RCurl incompatible with our api, so we switched to httr
+* Modified functions to fail gracefully if the internet or API are unavailabile
 
 ===============
 TNRS 0.1.0
